test/constBlockConsuming13.slq
// args: --run

def main(){
	x:=H(0);
	y:=dup(x);
	if y {
		forget(y); /// error // TODO: improve diagnostic
		H(0):=x;
	}else{
		forget(y); /// error
		H(0):=x;
	}
}
